[gd_scene load_steps=2 format=3 uid="uid://b8lqr127oldye"]

[ext_resource type="Script" path="res://scenes/UI/audio_settings.gd" id="1_xh7n7"]

[node name="Audio Settings" type="Control" node_paths=PackedStringArray("default_focus")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xh7n7")
default_focus = NodePath("AspectRatioContainer/VBoxContainer/MasterSlider")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
step = 5.0
value = 100.0

[node name="HSeparator" type="HSeparator" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label2" type="Label" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = "Turret Fire Volume"

[node name="FireSlider" type="HSlider" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
step = 5.0
value = 100.0

[node name="HSeparator2" type="HSeparator" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label3" type="Label" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = "Turret Whril Volume"

[node name="WhirlSlider" type="HSlider" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
step = 5.0
value = 100.0

[node name="HSeparator3" type="HSeparator" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label4" type="Label" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
text = "Freeze Effect Volume"

[node name="FXSlider" type="HSlider" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
step = 5.0
value = 100.0

[node name="HSeparator4" type="HSeparator" parent="AspectRatioContainer/VBoxContainer"]
visible = false
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="value_changed" from="AspectRatioContainer/VBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="AspectRatioContainer/VBoxContainer/FireSlider" to="." method="_on_fire_slider_value_changed"]
[connection signal="value_changed" from="AspectRatioContainer/VBoxContainer/WhirlSlider" to="." method="_on_whirl_slider_value_changed"]
[connection signal="value_changed" from="AspectRatioContainer/VBoxContainer/FXSlider" to="." method="_on_fx_slider_value_changed"]
